@@ -1,3 +1,12 @@
+2010-02-24 16:45-EST Gregory John Casamento <greg.casamento@gmail.com>
+
+	* Source/win32/WIN32Server.m: Added a boolean to control if 
+	callbacks are honored so that we can ignore the 
+	SetActiveWindow(...) call when windows are resigned.  Otherwise 
+	this causes some issues and could result in an inconsistent state.
+	* Source/winlib/WIN32GState.m: Moved AlphaBlend to seperate 
+	function so that it can be called elsewhere. 
+
 2010-02-20 Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/gsc/GSStreamContext.m
